@@ -407,6 +407,7 @@ All Issues:
   * [MESOS-6950] - Launching two tasks with the same Docker image simultaneously may cause a staging dir never cleaned up.
   * [MESOS-7652] - Docker image with universal containerizer does not work if WORKDIR is missing in the rootfs.
   * [MESOS-7858] - Launching a nested container with namespace/pid isolation, with glibc < 2.25, may deadlock the LinuxLauncher and MesosContainerizer.
+  * [MESOS-7863] - Agent may drop pending kill task status updates.
   * [MESOS-7865] - Agent may process a kill task and still launch the task.
   * [MESOS-7909] - Ordering dependency between 'linux/capabilities' and 'docker/runtime' isolator.
 
@@ -938,6 +939,7 @@ All Issues:
   * [MESOS-7777] - Agent failed to recover due to mount namespace leakage in Docker 1.12/1.13.
   * [MESOS-7796] - LIBPROCESS_IP isn't passed on to the fetcher.
   * [MESOS-7830] - Sandbox_path volume does not have ownership set correctly.
+  * [MESOS-7863] - Agent may drop pending kill task status updates.
   * [MESOS-7865] - Agent may process a kill task and still launch the task.
 
 
